--- a/style.css
+++ b/style.css
@@ -3,7 +3,14 @@ body{
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    background-color: rgb(244, 243, 241);
+    background-color: #F9FAFB;
+    
+}
+input,
+button,
+select,
+textarea{
+    font: inherit;
 }
 :root{--left-width: 40vw;}
 .sky{
@@ -15,8 +22,21 @@ width: 100%;
 height: 100%;
 object-fit: cover;
 display: block;
-
 }
+
+.night-container{
+    width: var(--left-width);
+    padding: 20px;
+    margin-top: 120px;
+    position: absolute;
+    background-color: rgba(13, 1, 4, 0.50);
+    color: #FFFFFF;
+    font-size: 3em;
+    font-weight: bold;
+    text-align: center;
+}
+
+
 .left-side{
     position: fixed;
     left: 0;
@@ -28,15 +48,84 @@ overflow: hidden;
 
 .right-side{
     margin-left: var(--left-width);
-    padding: 2rem;
 }
 .moto{
     margin-top: 90px;
-    font-size: 20px;
+    font-size: 1.3rem;
     font-style: italic;
     font-weight: 600;
+    padding: 10px 10px 10px 35px;
+    
+}
+legend{
+    font-size: 1.2rem;
+   font-weight: 500;
 }
 form{
-    padding: 10px;
+ 
+        
     
+}
+fieldset{
+    border: none;
+    display: flex;
+    width: 60vw;
+    gap: 2rem;
+    margin-top: 60px;
+    padding: 15px 15px 15px 35px;
+    margin-bottom: 30px;
+    background-color:#FFFFFF;
+  box-shadow: 0px 6px 0px -2px rgba(0,0,0,0.14);
+-webkit-box-shadow: 0px 6px 0px -2px rgba(0,0,0,0.14);
+-moz-box-shadow: 0px 6px 0px -2px rgba(0,0,0,0.14);
+}
+
+label{
+    font-size: 1.2em;
+    
+}
+.left-inputs, .right-inputs{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+}
+button{
+    width: 200px;
+    height: 40px;
+    font-size: 1.1em;
+    font-weight: 700;
+    background-color: #596D48;
+    color: #fcfdfb;
+    border-radius: 5px;
+    margin-left:20px;
+}
+.account{
+padding: 15px 15px 15px 50px;
+display: flex;
+flex-direction: column;
+gap: 10px;
+}
+.login{
+    font-size: 1.2em;
+}
+a{
+    text-decoration: none;
+    color: #596D48;
+    font-weight: 600;
+}
+
+input{
+    border-radius: 3px;
+}
+
+input:focus{
+border: 4px solid #c6d1f0;
+box-shadow: 0px 4px 14px 3px rgba(0,0,0,0.14);
+-webkit-box-shadow: 0px 4px 14px 3px rgba(0,0,0,0.14);
+-moz-box-shadow: 0px 4px 14px 3px rgba(0,0,0,0.14);
+}
+
+input[type="password"]:invalid{
+   border: 1.8px solid #ea0000;
 }
